refactor : print문 변경