@@ -10,6 +10,8 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.Cookie;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
@@ -18,11 +20,14 @@ import org.springframework.stereotype.Component;
 
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Collection;
 import java.util.Iterator;
 
 @Component
 public class CustomSuccessHandler extends SimpleUrlAuthenticationSuccessHandler {
+
+    private static final Logger logger = LoggerFactory.getLogger(CustomSuccessHandler.class);
 
     private final MemberRepository memberRepository;
 
@@ -46,7 +51,7 @@ public class CustomSuccessHandler extends SimpleUrlAuthenticationSuccessHandler 
         String memberName = customUserDetails.getUsername();
         String name = customUserDetails.getName();
         Member isExistingUser = memberRepository.findByEmail(email);
-        System.out.println("isExistingUser" + isExistingUser);
+        logger.info("isExistingUser{}", isExistingUser);
 
         Collection<? extends GrantedAuthority> authorities = authentication.getAuthorities();
         Iterator<? extends GrantedAuthority> iterator = authorities.iterator();
@@ -55,12 +60,12 @@ public class CustomSuccessHandler extends SimpleUrlAuthenticationSuccessHandler 
 
         String token = jwtUtil.createJwt(memberName,name, role, 60*60*60L);
 
-        response.addCookie(createCookie("Authorization", token));
+        response.addCookie(createCookie(token));
         ObjectMapper objectMapper = new ObjectMapper();
         objectMapper.registerModule(new JavaTimeModule());
 
         String customUserDetailsJson = objectMapper.writeValueAsString(isExistingUser);
-        Cookie userCookie = new Cookie("customUserDetails", URLEncoder.encode(customUserDetailsJson, "UTF-8"));
+        Cookie userCookie = new Cookie("customUserDetails", URLEncoder.encode(customUserDetailsJson, StandardCharsets.UTF_8));
         userCookie.setMaxAge(60 * 60 * 24);
         userCookie.setPath("/");
         response.addCookie(userCookie);
@@ -68,9 +73,9 @@ public class CustomSuccessHandler extends SimpleUrlAuthenticationSuccessHandler 
         response.sendRedirect(reactServer + "/");
     }
 
-    private Cookie createCookie(String key, String value) {
+    private Cookie createCookie(String value) {
 
-        Cookie cookie = new Cookie(key, value);
+        Cookie cookie = new Cookie("Authorization", value);
         cookie.setMaxAge(60*60*60);
         cookie.setSecure(true);
         cookie.setPath("/");
